--- a/index.css
+++ b/index.css
@@ -27,21 +27,42 @@ body{
 }
 
 .illustrations{
-    background-image: url('/images/illustration-woman-online-desktop.svg'), url('/images/bg-pattern-desktop.svg');
-    background-repeat: no-repeat;
-    background-position: -80px center, -570px 70%;
     height: 100%;
     display: flex;
     width: 50%;
     z-index: 1;
+    background-image: url('/images/illustration-woman-online-desktop.svg'), url('/images/bg-pattern-desktop.svg');
+    background-repeat: no-repeat;
+    background-position: -80px center, -570px 70%;
 }
 
-.illustrations img{
+.desktop{
     display: block;
     position: relative;
     top: 13.5vw;
     right: 6.5vw;
-    height: 39%;
+    height: 60%;
+    display: flex;
+    z-index: 1;
+    overflow: hidden;
+    position: fixed;
+    left: 50%;
+    transform: translate(-108%, -18%);
+}
+
+#box{
+    height: 30%;
+    transform: translate(-340%, 15%);
+    z-index: 2;
+    overflow: visible !important;
+}
+
+.mobile{
+    display: none;
+}
+
+.headline{
+   color: hsl(238, 29%, 16%);
 }
 
 button{
